; ModuleID = '/home/carl/AnghaBench/Craft/deps/glfw/examples/extr_boing.c_display.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/glfw/examples/extr_boing.c_display.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GL_COLOR_BUFFER_BIT = common dso_local global i32 0, align 4
@GL_DEPTH_BUFFER_BIT = common dso_local global i32 0, align 4
@DRAW_BALL_SHADOW = common dso_local global i32 0, align 4
@drawBallHow = common dso_local global i32 0, align 4
@DRAW_BALL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @display() #0 {
  %1 = load i32, i32* @GL_COLOR_BUFFER_BIT, align 4
  %2 = load i32, i32* @GL_DEPTH_BUFFER_BIT, align 4
  %3 = or i32 %1, %2
  %4 = call i32 @glClear(i32 %3)
  %5 = call i32 (...) @glPushMatrix()
  %6 = load i32, i32* @DRAW_BALL_SHADOW, align 4
  store i32 %6, i32* @drawBallHow, align 4
  %7 = call i32 (...) @DrawBoingBall()
  %8 = call i32 (...) @DrawGrid()
  %9 = load i32, i32* @DRAW_BALL, align 4
  store i32 %9, i32* @drawBallHow, align 4
  %10 = call i32 (...) @DrawBoingBall()
  %11 = call i32 (...) @glPopMatrix()
  %12 = call i32 (...) @glFlush()
  ret void
}

declare dso_local i32 @glClear(i32) #1

declare dso_local i32 @glPushMatrix(...) #1

declare dso_local i32 @DrawBoingBall(...) #1

declare dso_local i32 @DrawGrid(...) #1

declare dso_local i32 @glPopMatrix(...) #1

declare dso_local i32 @glFlush(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
